feat: Add more thorough user/listener combination tests and fix bugs
Signed-off-by: Katherine Stanley <11195226+katheris@users.noreply.github.com>